--- a/login/style.css
+++ b/login/style.css
@@ -1,6 +1,10 @@
+@font-face{
+    font-family: myFont;
+    src: url('google.ttf');
+}
 body {
     background-color: #FFFFFF;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'myFont', "Open Sans", sans-serif;
 }
 
 .main {
@@ -15,7 +19,6 @@ body {
 .sign {
     padding-top: 40px;
     color: #1e2b38;
-    font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     font-size: 23px;
 }
@@ -37,7 +40,6 @@ body {
     margin-left: 46px;
     text-align: center;
     margin-bottom: 27px;
-    font-family: 'Ubuntu', sans-serif;
 }
 
 form.form1 {
@@ -61,7 +63,6 @@ form.form1 {
     margin-left: 46px;
     text-align: center;
     margin-bottom: 27px;
-    font-family: 'Ubuntu', sans-serif;
 }
 
 .un:focus, .pass:focus {
@@ -78,17 +79,10 @@ form.form1 {
     padding-right: 40px;
     padding-bottom: 10px;
     padding-top: 10px;
-    font-family: 'Ubuntu', sans-serif;
     margin-left: 35%;
     font-size: 13px;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
 }
-/* 
-.forgot {
-    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-    color: #E1BEE7;
-    padding-top: 15px;
-} */
 
 a {
     text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
